# office_small_panda

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  办公小浣熊复刻计划报告.md
backend/: pyproject.toml  run_acceptance.py  run_acceptance_stage2.py  run_acceptance_stage3.py  run_eval.py
backend/app/: at_trigger.py  auth.py  checkpoint.py  context.py  dataset.py  embedding.py  harness.py  hooks.py  knowledge_base.py  llm.py  main.py  mcp_client.py  plan.py  plan_mode.py  providers.py  replan.py  sandbox.py  sandbox_docker.py  skills.py  subagent.py  tools_registry.py
backend/app/tools/: __init__.py  base.py  chart_tools.py  data_tools.py  kb_tools.py  mcp_tools.py  plan_tools.py  ppt_tools.py  report_tools.py  sandbox_tools.py  skill_tools.py  subagent_tools.py  todo_tools.py  upload_tools.py
backend/mcp_servers/: filestore_server.py
data/: sample_sales.csv
deploy/: PRIVATE_DEPLOY.md  backend.Dockerfile  docker-compose.prod.yml  frontend.Dockerfile
deploy/sandbox/: Dockerfile
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
skills/: ecommerce.md  education.md  finance.md  healthcare.md  procurement.md
