[project]
name = "office-small-panda-backend"
version = "0.1.0"
description = "办公小浣熊 Raccoon 复刻 - 后端 Agent 工程"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pocketflow>=0.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "kaleido>=0.2",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
